--- a/index.html
+++ b/index.html
@@ -8,6 +8,30 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header class="header">
+
+    </header>
+    <section class="slider-section">
+
+    </section>
+    <section class="menu-iconos">
+
+    </section>
+    <section class="seccion-imagenes">
+
+    </section>
+    <section class="servicios">
+
+    </section>
+    <section class="franja">
+
+    </section>
+    <footer class="footer">
+        <form action="" class="contacto"></form>
+        <div class="redes-derechos">
+
+        </div>
+    </footer>
+
 </body>
 </html>
