--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
 </head>
 <body>
     <header class="header">
-
+        <div class="logo">
+            <img src="./imagenes/logo.png" alt="">
+        </div>
+        <div class="menu">
+            <div class="option-menu"><a href="#">Inicio</a></div>
+            <div class="option-menu"><a href="#">Servicios</a></div>
+            <div class="option-menu"><a href="#">Productos</a></div>
+            <div class="option-menu"><a href="#">Contacto</a></div>
+        </div>
+        <img class="hamb-btn"src="./imagenes/menu-btn.png" alt="">
     </header>
     <section class="slider-section">
 
@@ -32,6 +41,16 @@
 
         </div>
     </footer>
+
+
+    <script>
+        const menuBtn = document.querySelector('.hamb-btn')
+        const navlinks = document.querySelector('.menu')
+
+        menuBtn.addEventListener('click', ()=>{
+            navlinks.classList.toggle("mobile-menu")
+        })
+    </script>
 
 </body>
 </html>
