formulario de contacto y footer listo

--- a/index.html
+++ b/index.html
@@ -41,23 +41,39 @@
         </div>
     </section>
     <section class="menu-iconos">
-
+        menu iconos...
     </section>
     <section class="seccion-imagenes">
-
+        seccion imagenes...
     </section>
     <section class="servicios">
-
+        servicios...
     </section>
     <section class="franja">
-
+        franaj...
     </section>
-    <footer class="footer">
-        <form action="" class="contacto"></form>
-        <div class="redes-derechos">
 
-        </div>
-    </footer>
+
+
+    
+    <section class="contacto" id="contacto">
+        <h1 >Contáctanos, envíanos tus datos</h1>
+        <div class="line"></div>
+        <form action="" class="form">
+            <div class="text-inputs">
+                <input type="text" name="" id="" placeholder="Nombre">
+                <input type="email" name="" id="" placeholder="Email">
+            </div>
+            <textarea name="" id="" cols="40" rows="5" placeholder=" Mensaje (opcional)"></textarea>
+            <input type="submit" class="ctn" value="Enviar">
+        </form>
+    </section>
+
+
+    <section class="footer">
+        <p>123 Fift Avenue, NY 10160, New York, USA | Phone: 900-901-901 | Email: contact@gmail.com</p>
+        <p>Copyright © 2022 Outdor Adventure</p>
+    </section>
 
     <script src="slider.js"></script>
     <script>
