--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 </head>
+
 <body>
     <header class="header">
         <div class="logo">
@@ -18,10 +22,10 @@
             <div class="option-menu"><a href="#">Productos</a></div>
             <div class="option-menu"><a href="#">Contacto</a></div>
         </div>
-        <img class="hamb-btn"src="./imagenes/menu-btn.png" alt="">
+        <img class="hamb-btn" src="./imagenes/menu-btn.png" alt="">
     </header>
     <section class="slider-section">
-        <div  class="mislider fade">
+        <div class="mislider fade">
             <img src="./imagenes/img1.jpg" alt="">
         </div>
         <div class="mislider fade">
@@ -41,23 +45,104 @@
         </div>
     </section>
     <section class="menu-iconos">
-        menu iconos...
+        <h2 class="titulo">Nuestros Productos</h2>
+        <div class="productos">
+            <div class="producto">
+                <div class="img"><img src="imagenes/icono1.png" alt="" srcset=""></div>
+                <h5>BAÑO</h5>
+            </div>
+            <div class="producto">
+                <div class="img"><img src="imagenes/icono1.png" alt="" srcset=""></div>
+                <h5>BAÑO</h5>
+            </div>
+            <div class="producto">
+                <div class="img"><img src="imagenes/icono1.png" alt="" srcset=""></div>
+                <h5>BAÑO</h5>
+            </div>
+            <div class="producto">
+                <div class="img"><img src="imagenes/icono1.png" alt="" srcset=""></div>
+                <h5>BAÑO</h5>
+            </div>
+            <div class="producto">
+                <div class="img"><img src="imagenes/icono1.png" alt="" srcset=""></div>
+                <h5>BAÑO</h5>
+            </div>
+            <div class="producto">
+                <div class="img"><img src="imagenes/icono1.png" alt="" srcset=""></div>
+                <h5>BAÑO</h5>
+            </div>
+
+
+
+        </div>
     </section>
     <section class="seccion-imagenes">
-        seccion imagenes...
+        <p>"Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem aperiam dicta fugit repellendus, quae,
+            esse doloribus sunt hic tenetur debitis provident voluptatum dignissimos quia labore unde. Ea est vel
+            facere! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae, numquam recusandae? Veritatis, quam
+            blanditiis dolor fugit modi nulla facilis vitae dolores dicta, pariatur, impedit enim laboriosam commodi
+            itaque inventore quasi."</p>
+        <h5 class="titulo">Cariños Juliet</h5>
     </section>
+
+
     <section class="servicios">
-        servicios...
+        <h2 class="titulo">Servicios Ofrecidos</h2>
+
+        <div class="cards_container">
+        <div class="card_container card2">
+            <div class="card2_contenido">
+                <div class="card2_texto">
+                    <h3>Sublimación</h3>
+                    <span></span>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est a optio ex rem adipisci ut non eos
+                        facilis possimus assumenda provident doloremque, magni, tempore reprehenderit maiores
+                        exercitationem odit in explicabo.</p>
+                    <div class="boton">VER MÁS</div>
+                </div>
+            </div>
+
+        </div>
+        <div class="card_container card2">
+            <div class="card2_contenido">
+                <div class="card2_texto">
+                    <h3>Bordado</h3>
+                    <span></span>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est a optio ex rem adipisci ut non eos
+                        facilis possimus assumenda provident doloremque, magni, tempore reprehenderit maiores
+                        exercitationem odit in explicabo.</p>
+                    <div class="boton">VER MÁS</div>
+                </div>
+            </div>
+
+        </div>
+        <div class="card_container card2">
+            <div class="card2_contenido">
+                <div class="card2_texto">
+                    <h3>Confección</h3>
+                    <span></span>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est a optio ex rem adipisci ut non eos
+                        facilis possimus assumenda provident doloremque, magni, tempore reprehenderit maiores
+                        exercitationem odit in explicabo.</p>
+                    <div class="boton">VER MÁS</div>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
     </section>
-    <section class="franja">
-        franaj...
+    <section class="cards_container franja ">
+        <div class="datos"><i class="bi bi-wallet2"></i>PAGA CON TARJETA O EFECTIVO</div>
+        <div class="datos"><i class="bi bi-shop"></i>RETIRA EN NUESTRO LOCAL</div>
+        <div class="datos"><i class="bi bi-geo-alt-fill"></i>ENVÍOS A TODO EL PAIS</div>
     </section>
 
 
 
-    
+
     <section class="contacto" id="contacto">
-        <h1 >Contáctanos, envíanos tus datos</h1>
+        <h1>Contáctanos, envíanos tus datos</h1>
         <div class="line"></div>
         <form action="" class="form">
             <div class="text-inputs">
@@ -80,10 +165,11 @@
         const menuBtn = document.querySelector('.hamb-btn')
         const navlinks = document.querySelector('.menu')
 
-        menuBtn.addEventListener('click', ()=>{
+        menuBtn.addEventListener('click', () => {
             navlinks.classList.toggle("mobile-menu")
         })
     </script>
 
 </body>
+
 </html>
