--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cariños Juliet</title>
     <link rel="stylesheet" href="style.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 </head>
 
 <body>
+    <a href="https://wa.me/+584129853249" class="btn-wsp" target="_blank">
+        <img src="imagenes/whatsapp.png" alt="">
+    </a>
     <header class="header">
         <div class="logo">
             <img src="./imagenes/logo.png" alt="">
